--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.3",
     "react-multi-carousel": "^2.8.5",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
